--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sphinxsearch (0.9.9-rc1.zorpos33.1) scb20; urgency=low
+
+  * Bumped Debian version to 0.9.9-rc1.zorpos33.1
+
+ -- Peter Gyongyosi <gyp@balabit.hu>  Mon, 11 May 2009 14:21:12 +0200
+
 sphinxsearch (0.9.8-1.zorpos33.1) scb20; urgency=low
 
   * Use zorpos version
