--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sphinxsearch (0.9.9-rc1.zorpos40.1) scb20; urgency=low
+
+  * Bumped Debian version to 0.9.9-rc1.zorpos40.1
+
+ -- Oliver Pinter <op@balabit.hu>  Mon, 23 Aug 2010 15:47:12 +0200
+
 sphinxsearch (0.9.9-rc1.zorpos33.1) scb20; urgency=low
 
   * Bumped Debian version to 0.9.9-rc1.zorpos33.1
