--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sphinxsearch (0.9.9-rc1bb1) xenial; urgency=medium
+
+  * Ported to xenial
+
+ -- Balabit Platform Team <devnull@dev.null>  Wed, 09 Nov 2016 14:42:10 +0100
+
 sphinxsearch (0.9.9-rc1.zorpos40.1) scb20; urgency=low
 
   * Bumped Debian version to 0.9.9-rc1.zorpos40.1
